[gd_scene load_steps=14 format=2]

[ext_resource path="res://Levels/TitleScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PlayerLevel4.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Ediatble Title Label.gd" type="Script" id=3]
[ext_resource path="res://deftone stylus.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Result Text.gd" type="Script" id=5]
[ext_resource path="res://Scripts/White Man.gd" type="Script" id=6]
[ext_resource path="res://white_man.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Interact Text.gd" type="Script" id=8]
[ext_resource path="res://Knife_Slice_Into_Flesh_Sound_Effect-eIjwIIaF3t0.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.8179, 30.7152 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 151.96, 363.703 )

[node name="Node2D" instance=ExtResource( 1 )]

[node name="Player" parent="." index="0"]
script = ExtResource( 2 )

[node name="Title Proc Body" parent="." index="6"]
position = Vector2( 199.023, 360.217 )

[node name="Title Label" parent="Control" index="0"]
margin_left = 23.0
margin_top = 41.0
margin_right = 1181.0
margin_bottom = 540.0
text = "I found myself face to face with a strange man. He seemed to speak through his nose.
I could tell he was a bad omen"
script = ExtResource( 3 )
textSpeed = 0.005

[node name="Result Text" type="RichTextLabel" parent="Control" index="1"]
margin_left = 306.532
margin_top = 486.515
margin_right = 1226.53
margin_bottom = 561.515
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "I decided to rid of the problem immediately"
script = ExtResource( 5 )

[node name="Light2D" parent="." index="9"]
position = Vector2( 546.453, 194.17 )
scale = Vector2( 6.02625, 6.02625 )

[node name="White Man" type="RigidBody2D" parent="." index="10"]
position = Vector2( 639.562, 280.001 )
z_index = 1
collision_mask = 16
mass = 65535.0
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="White Man" index="0"]
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 7 )

[node name="White Man Hitbox" type="CollisionShape2D" parent="White Man" index="1"]
shape = SubResource( 2 )

[node name="Interact Text" type="RichTextLabel" parent="White Man" index="2"]
margin_left = -130.565
margin_top = -21.5237
margin_right = -33.5654
margin_bottom = 16.4763
custom_fonts/normal_font = SubResource( 3 )
text = "Kill Man"
script = ExtResource( 8 )

[node name="Interact" type="Area2D" parent="." index="11"]
position = Vector2( 642.286, 360 )
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact" index="0"]
rotation = -0.00170386
shape = SubResource( 4 )

[node name="Audio" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource( 9 )
[connection signal="body_entered" from="Interact" to="Player" method="_on_Interact_body_entered"]
[connection signal="body_exited" from="Interact" to="Player" method="_on_Interact_body_exited"]
